css: fix sidebar center alignment

--- a/jekyll/assets/css/sidebar.css
+++ b/jekyll/assets/css/sidebar.css
@@ -14,6 +14,7 @@
 
 .sidebar ol {
   list-style: none;
+  margin: 0;
   
 }
 
